2011-08-18  6.7.1-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-8.

2011-08-18  6.7.1-8 Cristy  <quetzlzacatenango@image...>
  * Caption now wraps properly for Chinese text (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19249).

2011-08-18  6.7.1-8 Glenn Randers-Pehrson <glennrp@image...>
  * The PNG encoder would sometimes fail to respect the -define PNG:color-type
    option when the incoming image was PseudoClass (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=19262).

2011-08-15  6.7.1-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-7.

2011-08-15  6.7.1-7 Cristy  <quetzlzacatenango@image...>
  * Properly handled continued JPEG embedded profiles.

2011-08-12  6.7.1-6 Cristy  <quetzlzacatenango@image...>
  * Yet another attempt to read Japanese filenames under Windows.

2011-08-10  6.7.1-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-5.

2011-08-10  6.7.1-5 Cristy  <quetzlzacatenango@image...>
  * Revert -colorspace sRGB option patch (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19256).
  * Revert -type PaletteMatte option patch (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19263

2011-08-09  6.7.1-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-4.

2011-08-09  6.7.1-4 Cristy  <quetzlzacatenango@image...>
  * Revert MultiByteToWideChar() for Windows patch.

2011-08-05  6.7.1-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-3.

2011-08-05  6.7.1-3 Cristy  <quetzlzacatenango@image...>
  * Use MultiByteToWideChar() for Windows filenames (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19242).

2011-08-03  6.7.1-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-2.

2011-08-02  6.7.1-2 Cristy  <quetzlzacatenango@image...>
  * Windows does not support acosh(), asinh(), or atanh().